--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -2,5 +2,8 @@
  * Variables
  */
 // Theme Colors
-$theme-color-black: #2f3338;
-$theme-color-white: #F0F0F0;
+$theme-color-mizu:  #4a92a4;
+$theme-color-black: #282828;
+$theme-color-white: #FFFFFF;
+$theme-color-gray:  #e5e5e5;
+$theme-color-orange: #c38118;
