--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,3 +4,7 @@
 // Base Style
 @import "modules/base";
 @import "modules/todolist";
+@import "modules/searchbar";
+
+// Antd Style
+@import '~antd/dist/antd.css';
