--- a/src/styles/modules/_searchbar.scss
+++ b/src/styles/modules/_searchbar.scss
@@ -2,7 +2,7 @@
  * Search Bar
  */
 .mizu-search {
-    position: absolute;
+    position: relative;
     width: 50%;
     left: 0; top: 0;
     padding: 10vh 5vh;
