--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,6 +5,7 @@
 @import "modules/base";
 @import "modules/todolist";
 @import "modules/searchbar";
+@import "modules/sitelist";
 
 // Antd Style
 @import '~antd/dist/antd.css';
